src/styles.css
body {
  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%) fixed;
  font-family: "Open Sans", sans-serif;
  color: #34495e;
}

.rounded-corners {
  border-radius: 2em;
}

h1 {
  font-weight: 700;
}

h2 {
  font-weight: 200;
}

#currentTemp {
  font-weight: 400;
}

#celsius,
#fahrenheit {
  cursor: pointer;
}

.active {
  color: #3498db;
}

#main-weather-icon {
  font-size: 80px;
}

#currentPos {
  color: #3498db;
  cursor: pointer;
}

a {
  color: #3498db;
}

a:hover {
  text-decoration: none;
  cursor: pointer;
}

